# pads

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
headers/: binary-set.h  binary_set.h  double_list.h  list.h  queue.h  single_list.h  stack.h
source/: CMakeLists.txt  functions.c  functions.h
source/binary_set/: binary_set.h
source/binary_set/tests/: binary_set_test.h
source/deque/: deque.h
source/deque/tests/: CMakeLists.txt  finite_allocated_deque_test.c  finite_preprocessor_deque_test.c  infinite_list_deque_test.c  infinite_realloc_deque_test.c  main.c
source/forward_list/: forward_list.h
source/forward_list/tests/: CMakeLists.txt  finite_allocated_forward_list_test.c  finite_preprocessor_forward_list_test.c  forward_list_test.h  infinite_allocated_forward_list_test.c  infinite_realloc_forward_list_test.c  main.c
source/graph/matrix_graph/: matrix_graph.h
source/list/: README.md  circular_list.h  double_list.h  list.h  straight_list.h
source/list/circular_list/: circular_list.h
source/list/double_list/: double_list.h
source/list/straight_list/: straight_list.h
source/list/tests/: CMakeLists.txt  (+4 more)
source/matrix_graph/: matrix_graph.h
source/priority/: binary_heap.h  sort_heap.h
source/queue/: queue.h
source/queue/tests/: CMakeLists.txt  finite_allocated_queue_test.c  finite_preprocessor_queue_test.c  infinite_list_queue_test.c  infinite_realloc_queue_test.c  main.c  queue_test.h
source/sequence/: README.md  deque.h  queue.h  stack.h
source/sequential/: README.md  queue.h  stack.h
source/set/: binary_set.h  bitwise_set.h  bsearch_set.h  hash_set.h
source/stack/: stack.h
source/stack/tests/: CMakeLists.txt  finite_allocated_stack_test.c  finite_preprocessor_stack_test.c  finite_wrapper_stack_test.c  infinite_list_stack_test.c  infinite_realloc_stack_test.c  main.c  stack_test.h
source/straight_list/: straight_list.h
source/straight_list/tests/: CMakeLists.txt  finite_allocated_straight_list_test.c  finite_preprocessor_straight_list_test.c  infinite_allocated_straight_list_test.c  infinite_realloc_straight_list_test.c  main.c  straight_list_test.h
source/tree/: avl_tree.h  binary_tree.h  bsearch_tree.h  red_black_tree.h
structures/: CMakeLists.txt  stack.h
test/: CMakeLists.txt
test/binary-set/: CMakeLists.txt  main.c
test/binary_set/: CMakeLists.txt  finite_allocated_binary_set.c  finite_preprocessor_binary_set.c  infinite_realloc_binary_set.c  main.c
test/double_list/: CMakeLists.txt  double_list_test.h  finite_allocated_double_list_test.c  finite_preprocessor_double_list_test.c  infinite_allocated_double_list_test.c  infinite_realloc_double_list_test.c  main.c
test/helper/: functions.c  functions.h
test/list/: CMakeLists.txt  create_list_test.c  finite_allocated_list_test.c  finite_preprocessor_list_test.c  infinite_allocated_list_test.c  infinite_realloc_list_test.c  main.c  suits.h
test/list/circular_list/: CMakeLists.txt  circular_list_test.h  finite_allocated_forward_list_test.c  finite_preprocessor_forward_list_test.c  forward_list_test.h  infinite_allocated_forward_list_test.c  infinite_realloc_forward_list_test.c  main.c
test/list/circular_list/mode/: finite_allocated_circular_list_test.c  finite_preprocessor_circular_list_test.c  infinite_allocated_circular_list_test.c  infinite_realloc_circular_list_test.c
test/list/double_list/: CMakeLists.txt  double_list_test.h  finite_allocated_list_test.c  infinite_allocated_list_test.c  infinite_realloc_list_test.c  list_test.h  main.c
test/list/double_list/mode/: finite_allocated_double_list_test.c  finite_preprocessor_double_list_test.c  infinite_allocated_double_list_test.c  infinite_realloc_double_list_test.c
test/list/straight_list/: CMakeLists.txt  main.c  straight_list_test.h
test/list/straight_list/mode/: finite_allocated_straight_list_test.c  finite_preprocessor_straight_list_test.c  infinite_allocated_straight_list_test.c  infinite_realloc_straight_list_test.c
test/list/suits/: circular_list_test.c  double_list_test.c  straight_list_test.c
test/priority/: CMakeLists.txt  main.c  suits.h
test/priority/suits/: binary_heap_test.c  sort_heap_test.c
test/queue/: CMakeLists.txt  copy_queue_test.c  create_queue_test.c  dequeue_test.c  destroy_queue_test.c  enqueue_test.c  finite_allocated_queue_test.c  finite_preprocessor_queue_test.c  infinite_list_queue_test.c  infinite_realloc_queue_test.c  is_full_queue_test.c  main.c  peek_queue_test.c  queue_test.h
test/sequence/: CMakeLists.txt
test/sequence/suits/: deque_test.c  queue_test.c  stack_test.c
test/sequential/: CMakeLists.txt  main.c  suits.h
test/sequential/deque/: CMakeLists.txt  deque_test.h  main.c
test/sequential/deque/mode/: finite_allocated_deque_test.c  finite_preprocessor_deque_test.c  infinite_list_deque_test.c  infinite_realloc_deque_test.c
test/sequential/queue/: CMakeLists.txt  main.c  queue_test.h
test/sequential/queue/mode/: finite_allocated_queue_test.c  finite_preprocessor_queue_test.c  infinite_list_queue_test.c  infinite_realloc_queue_test.c
test/sequential/stack/: CMakeLists.txt  main.c
test/sequential/stack/mode/: finite_allocated_stack_test.c  finite_preprocessor_stack_test.c  infinite_list_stack_test.c  infinite_realloc_stack_test.c
test/sequential/suits/: deque_test.c  queue_test.c  stack_test.c
test/set/: CMakeLists.txt  main.c  suits.h
test/set/binary_set/: CMakeLists.txt  binary_set_test.h  infinite_realloc_binary_set.c  main.c
test/set/binary_set/mode/: finite_allocated_binary_set.c  finite_preprocessor_binary_set.c  infinite_realloc_binary_set.c
test/set/suits/: binary_set_test.c  bitwise_set_test.c  bsearch_set_test.c  hash_set_test.c
test/stack/: CMakeLists.txt  copy_stack_test.c  create_stack_test.c  destroy_stack_test.c  finite_allocated_stack_test.c  finite_preprocessor_stack_test.c  infinite_list_stack_test.c  infinite_realloc_stack_test.c  is_full_stack_test.c  main.c  peek_stack_test.c  peep_stack_test.c  pop_stack_test.c  push_stack_test.c  sort_stack_test.c  stack_test.h
(+8 files in other folders)
